# GeSONN

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: runAna1DeepCircle.py  runAna1DeepReference.py  runAna1Poisson.py  runAna1RitzPINNs.py  runAna1Shape.py  runAna1exactsol.py
benchmark/exact_solutions/: circle_source_exp.csv  circle_source_one.csv  donut_ellipse_source_exp.csv  donut_ellipse_source_one.csv  donut_source_exp.csv  ellipse_source_exp.csv  ellipse_source_one.csv
benchmark/optimal_edp/: ff_edp_circle.csv  ff_edp_exp.csv
benchmark/shape_references/: ff_circle.csv  ff_exp.csv
examples/: network_parameters_wrt_network_files.md  runCom1PINNsBernoulli.py  runCom1PINNsLevelSet.py  runCom1PINNsPoisson.py  runCom1PINNsPoissonParam.py  runCom1PINNsPoissonRobin.py  runCom1PINNsTransport.py  runCom2SympNetsG.py  runCom2SympNetsGParam.py  runCom3DeepShapeBernoulli.py  runCom3DeepShapeBernoulliInverse.py  runCom3DeepShapeBernoulliLBFGS.py  runCom3DeepShapeGeometry.py  runCom3DeepShapeGeometryNeumann.py  runCom3DeepShapeGeometryParam.py  runCom3DeepShapeGeometryRobin.py  runCom3DeepShapeGeometryRobinParam.py  runCom3DeepShapePoisson.py  runCom3DeepShapeVictor.py
fem/: bernoulli.edp  poissonCircle.edp  poissonDonut.edp  poissonDonutEllipse.edp  poissonEllipse.edp  poissonEllipseRobin.edp  ptfixe.edp
fem/data/: donut.csv  ellipse.csv  ellipse_a.csv  ellipse_u.csv
outputs/PINNs/net/: param_param_SIAM.pth  poisson_benchmark_circle_source_exp.pth  (+8 more)
src/gesonn/: init.py
src/gesonn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+52 files in other folders)
